--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "author": "Bert Coleman",
   "license": "ISC",
   "engines": {
-    "node": "4.4.5",
-    "npm": "2.15.5"
+    "node": "~4.4.0",
+    "npm": "~2.15.0"
   },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
