--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "resume site",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
 
   },
   "author": "Bert Coleman",
   "license": "ISC",
   "engines": {
-    "node": "~4.4.0",
-    "npm": "~2.15.0"
+    "node": "4.4.5"
+
   },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
